# gemini-docs-processor

./: .env.example  .gitignore  GEMINI.md  METODOLOGIA.MD  README.md  debug_drive.html  main.py  matriz_analisis.py  matriz_genera.py  pyproject.toml  requirements.txt
output/: caj_cristo_iiee_coord_cist_mse_tic_entrevista.md  caj_cristo_iiee_coord_toe_hse_entrevista.md  caj_cristo_iiee_dir_hse_entrevista_documentos_de.md  caj_cristo_iiee_doc_notutor_a_hse_entrevista.md  caj_cristo_iiee_doc_notutor_a_tic_entrevista.md  caj_cristo_iiee_doc_notutor_c_tic_entrevista.md  caj_cristo_iiee_doc_notutor_d_tic_entrevista.md  caj_cristo_iiee_doc_tutor_a_hse_entrevista.md  caj_cristo_iiee_est_mse_hse_tic_grupo_focal.md  caj_cristo_iiee_fam_mse_hse_tic_grupo_focal.md  caj_cristo_iiee_psic_hse_entrevista_documentos_de.md  caj_manue_iiee_coord_cist_mse_tic_entrevista.md  caj_manue_iiee_coord_ped_mse_tic_entrevista.md  caj_manue_iiee_coord_toe_hse_entrevista.md  caj_manue_iiee_coord_toe_mse_entrevista.md  caj_manue_iiee_dir_hse_entrevista_documentos_de.md  caj_manue_iiee_dir_mse_tic_entrevista_documentos.md  caj_manue_iiee_doc_mse_grupo_focal_documentos_de.md  caj_manue_iiee_doc_notutor_a_hse_entrevista.md  caj_manue_iiee_doc_notutor_a_tic_entrevista.md  caj_manue_iiee_doc_notutor_b_tic_entrevista_parte.md  caj_manue_iiee_doc_notutor_c_tic_entrevista.md  caj_manue_iiee_doc_notutor_d_tic_entrevista_parte.md  caj_manue_iiee_doc_tutor_a_hse_entrevista.md  caj_manue_iiee_doc_tutor_b_hse_entrevista.md  caj_manue_iiee_est_mse_hse_tic_grupo_focal.md  lim_fanni_iiee_coord_ped_mse_tic_entrevista.md  (+67 more)
(+54 files in other folders)
